# gpu-compressor

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CLI.md  CODEBASE_INDEX.md  Cargo.toml  DESIGN.md  INSTRUCTIONS.md  KERNEL_RESEARCH.md  LICENSE  PKGBUILD  README.md  ZSTD_ENCODING_REFERENCE.md  blake3.cu  build.rs  install_nvcomp.sh  lzma2_match_find.cu  wrapper.h  zstd_compress.cu
src/: blake3.rs  cli.rs  compress_gdeflate.rs  compress_lzma2.rs  compress_lzma2_custom.rs  compress_zstd.rs  compress_zstd_custom.rs  constants.rs  cuda.rs  decompress.rs  dispatch.rs  format.rs  main.rs  multi.rs  nvcomp_bindings.rs  pipeline.rs  pipeline_dual.rs  pipeline_lzma2.rs  pipeline_lzma2_dual.rs  tui.rs
