[package]
name = "gpu-compressor"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated file compression using NVIDIA nvCOMP"
license = "MIT"
repository = "https://github.com/Lasimeri/gpu-compressor"
keywords = ["compression", "gpu", "cuda", "nvcomp"]
categories = ["compression", "command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
cuda-runtime-sys = "0.3.0-alpha.1"
cudarc = { version = "0.11", features = ["cuda-12050"] }
hex = "0.4"
walkdir = "2.4"
crossbeam-channel = "0.5"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
futures = "0.3"
tar = "0.4"

[profile.release]
codegen-units = 1

[build-dependencies]
bindgen = "0.70"
cc = "1.0"
